--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-App doesn’t collect any data
+<html>
+<head>
+</head>
+<body>
+<h1>Privacy Policy</h1>
+<h1>App doesn’t collect any data</h1>
+</body>
+</html>
